# ondivi

./: .ecrc  .gitignore  .gotemir.yaml  .pdd  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  cspell.json  cspell_custom_words.txt  lint-requirements.txt  lint_requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: mutation-coverage.yml  pr-check.yml  release.yml
mutants/tests/fixtures/: diff.patch  violations.txt
ondivi/: __init__.py  __main__.py  define_changed_lines.py  entry.py  filter_out_violations.py  types.py
ondivi/_internal/: __init__.py  define_additional.py  define_changed_lines.py  exceptions.py  filter_out_violations.py  linter_output_from_file.py  ondivi_types.py  types.py
tests/: __init__.py  conftest.py  test.py
tests/fixtures/: actual_violations.txt  diff.txt  fake_diff_out.sh  test-repo.yaml  violations.txt
tests/helpers/: __init__.py  define_repo.py
tests/it/: test_app.py  test_main.py
tests/unit/: test_define_changed_lines.py  test_entry.py  test_filter_out_violations.py  test_main.py  test_unit.py
tests/unit/_internal/: test_define_additional.py  test_define_changed_lines.py  test_filter_out_violations.py  test_linter_output_from_file.py  test_unit.py
